Updated to show ggplot of # of up and down reg probes when all samples are included in analysis

--- a/markdown_vaginal_cell_microarray.Rmd
+++ b/markdown_vaginal_cell_microarray.Rmd
@@ -55,7 +55,7 @@ boxplot(RAW.lumi)
 
 #adding in more complete pData that matches my formatting for the #explant data. 
 
-pData <- read.table(".//vaginal_cell_microarray//vaginalCellMicroarrayPhenoData.txt",
+pData <- read.table("vaginalCellMicroarrayPhenoData.txt",
                        sep="\t",row.names=1, header=TRUE)
 
 
