--- a/markdown_vaginal_explant_microarray.Rmd
+++ b/markdown_vaginal_explant_microarray.Rmd
@@ -6,7 +6,7 @@ output:
 
 "Vaginal explant herpes infection experiment"
 
-```{r,echo=FALSE,message=FALSE, warning=FALSE}
+```{r,echo=FALSE,message=FALSE, warning=FALSE, results = 'hide'}
 require(dplyr)
 require(lumi)
 require(limma)
@@ -14,7 +14,7 @@ require(limma)
 #READ IN RAW MICROARRAY DATA FINAL REPORT #######
 #data from shared resources
 
-RAW<-"J:\\MacLabUsers\\HLADIK SHARED\\Projects\\Herpes study\\Herpes-Project-1\\vaginal_explant_microarray\\vaginal_explant_Illumina\\2015_11_10\\GenomeStudioProject\\SeanHughes_HumanHT12v4_151112\\2015.11.12smhughesFinalReport.txt"
+RAW<-"J:\\MacLabUsers\\HLADIK SHARED\\Projects\\Herpes study\\Herpes-Project-1\\vaginal_explant_Illumina\\2015_11_10\\GenomeStudioProject\\SeanHughes_HumanHT12v4_151112\\2015.11.12smhughesFinalReport.txt"
 
 RAW.lumi<-lumiR(RAW,detectionTh = 0.05, na.rm = TRUE,convertNuID = FALSE, dec = '.',
                 parseColumnName = FALSE, checkDupId = FALSE,
@@ -26,22 +26,36 @@ RAW.lumi<-lumiR(RAW,detectionTh = 0.05, na.rm = TRUE,convertNuID = FALSE, dec = 
                 inputAnnotation=TRUE,
                 annotationColumn=c('ILMN_GENE', 'ENTREZ_GENE_ID', 'GI', 'ACCESSION', 'SYMBOL', 'PROBE_ID', 'PROBE_START', 'PROBE_SEQUENCE', 'CHROMOSOME', 'PROBE_CHR_ORIENTATION', 'PROBE_COORDINATES'),
                 verbose = TRUE)
+
+
 save(RAW.lumi, file="RAW.lumi.Rdata")
 ```
 
-EXPERIMENT NOTES 
-6 samples failed when the microarray was run 6,33,34,35,45,63
-and two failed QC (36,64). The failed were left out of the finalReport filethat we got from shared resources and we will leave all 8 out of the analysis too.
+EXPERIMENT NOTES
+
+6 samples failed when the microarray was run( 6,33,34,35,45,63)
+and two failed QC (36,64).
+
+6= One of the T-cell samples, not included in explant study
+33=ID326 T1 M
+34=ID 326 T2 V1
+35=ID 326 T3 V2
+36 ID 317 T2 M
+45 ID 318 T3 V1
+63 ID 327 T2 V1
+64 ID 319 T2 M
+
+
+Samples that failed the finalReport file were not included in the report we got from shared resources and I removed the ones that failed QC.
 
 ALSO
 
 The first 5 samples in the micrarray data are T cells that 
-were exposed to Tenofovir. These will be analyzed separately and
-can be separated from the vaginal explant data.
+were exposed to Tenofovir. These will be analyzed separately so I removed them from the data set here.
 
 
 ```{r,echo=FALSE,message=FALSE, warning=FALSE}
-########### SUBSETTING THE LUMIBATCH ######################
+########### SUBSETTING THE LUMIBATCH 
 
 #subset the lumibatch to remove the non-explant data AND the two samples
 #that were left in the finalReport but failed the QC
@@ -113,8 +127,10 @@ complete.RAW.lumi<-new("LumiBatch", exprs=exprs(RAW.lumi),phenoData=adf,
 
 save(complete.RAW.lumi,file="complete.RAW.lumi.Rdata")
 ```
+
  SOME PLOTS OF NON NORMALIZED DATA:
- density plot, cdf plot
+ density plot, cdf plot, sample relations
+ 
 ```{r,echo=FALSE,message=FALSE, warning=FALSE}
 #density plot
 density(complete.RAW.lumi)#number of probes for each sample that occur
@@ -129,28 +145,33 @@ plot(complete.RAW.lumi, what='sampleRelation',method="mds")
 #boxplot
 boxplot(complete.RAW.lumi)
 
-###################BACKGROUND CORRECTION ####################
+```
+
+
+```{r,echo=FALSE,message=FALSE, warning=FALSE, results = 'hide'}
+######## BACKGROUND CORRECTION 
 #the data we got from the core had no background correction so I will do it here
 
 B.complete.RAW.lumi<-lumiB(complete.RAW.lumi)
 
 
-#################### VST TRANSFORMATION ######################
+#################### VST TRANSFORMATION 
 #"Stabilizing the expression variance based on
 #the bead level expression variance and mean relations"
 
 TB.complete.RAW.lumi <-lumiT (B.complete.RAW.lumi)
 
-################## ROBUST SPLINE NORMALIZATION ################
+################## ROBUST SPLINE NORMALIZATION 
 
 NTB.complete.RAW.lumi<-lumiN(TB.complete.RAW.lumi,method="rsn")
 
-################# QUALITY CONTROL ############################
+################# QUALITY CONTROL 
 
 QNTB.complete.RAW.lumi <- lumiQ(NTB.complete.RAW.lumi,detectionTh=0.05)
 
 save(QNTB.complete.RAW.lumi, file = "QNTB.complete.RAW.lumi.Rdata")
 ```
+
 PLOTS OF NORMALIZED DATA 
 
 ```{r,echo=FALSE,message=FALSE, warning=FALSE}
@@ -161,17 +182,18 @@ plot(QNTB.complete.RAW.lumi, what='sampleRelation',method="mds")
 boxplot(QNTB.complete.RAW.lumi)
 
 ```
-FILTERING PROBES BASED ON DETECTION 
- Limma suggests to keep probes that are expressed above bg on 
+
+
+FILTERING PROBES 
+ Limma suggests to keep probes that are expressed above background on 
 at least n arrays where n is smallest number of replicates assigned
 to any of the treatment combinations.
 
-Our treatment combinations are TissueID/Treatment/Time
-We have 7 Tissue IDs x 3 Treatments x 3 time points=63 so the smallest number
- of replicates possible for any of those 63 arrays is 7
+Our treatment combinations are TissueID/Treatment/Time.
+We  have 7 replicates (donors) for each of the treatment combinations so I kept probes with detection levels above background in at least 7 samples.
 
 ```{r,echo=FALSE,message=FALSE, warning=FALSE}
-#this is how the detection filtering works
+#this is how the detection filtering works:
 #Mark the detection pvalues (there is one per probe per sample) with a 1 if <0.05 or a 0 if >0.05
 # using (detection(QNTB.complete.RAW.lumi)<0.05)
 
@@ -191,22 +213,36 @@ detectedProbes <- rowSums(detection(QNTB.complete.RAW.lumi)<0.05)>=7
 expressedProbes.lumi <-QNTB.complete.RAW.lumi[detectedProbes,]
 ```
 
-how many probes did we have before and after filtering?
-```{r,echo=FALSE,message=FALSE, warning=FALSE}
-dims(QNTB.complete.RAW.lumi)#47323
+Number of probes in data set before filtering:
 
-dims(expressedProbes.lumi)#21726
-```
-how many removed?
 ```{r,echo=FALSE,message=FALSE, warning=FALSE}
-dims(QNTB.complete.RAW.lumi)-dims(expressedProbes.lumi)#20192
+dims(QNTB.complete.RAW.lumi)[1]#47323
+```
+
+Number of probes in data set after filtering:
+
+```{r,echo=FALSE,message=FALSE, warning=FALSE}
+
+dims(expressedProbes.lumi)[1]
+
+```
+
+Number of probes removed by filtering:
+
+```{r,echo=FALSE,message=FALSE, warning=FALSE}
+dims(QNTB.complete.RAW.lumi)[1]-dims(expressedProbes.lumi)[1]
 
 save(expressedProbes.lumi, file="expressedProbes.lumi.Rdata")
 ```
-Here's the design matrix for the analysis
+
+The design matrix includes a combined treatment + timepoint parameter('r"Treat"') and a donor parameter ('r "TissueID"').
+
+'r design <-(~0+Treat+TissueID)'
+
 
 ```{r,echo=FALSE,message=FALSE, warning=FALSE}
-############### TARGETS AND DESIGN MATRIX ###################
+
+############### TARGETS AND DESIGN MATRIX 
 # see section 9.4.1 and 9.4.2 in the limma users guide
 
 targets<-pData(expressedProbes.lumi)%>%
@@ -215,12 +251,24 @@ TissueID<- factor(targets$TissueID)
 Treat <-factor(paste(targets$Treatment,targets$Time, sep="."))
 
 design<-model.matrix (~0+Treat+TissueID)
-design
+
 ```
-Here's the contrasts matrix
+
+Then we choose the comparisons we want to analyze. I will compare treatment + timepoint condition with the corresponding mock infection in the same donor. This gives 6 contrasts to analyze:
+
+  V186.3vsMock.3
+  V186.8vsMock.8
+  V186.24vsMock.24 
+  
+  SD90.3vsMock.3 
+  SD90.8vsMock.8 
+  SD90.24vsMock.24
+
 
 ```{r,echo=FALSE,message=FALSE, warning=FALSE}
-####################### FIT MODEL TO PROBES ###################
+
+####################### FIT MODEL TO PROBES
+
 fit <- lmFit(expressedProbes.lumi,design=design)
 save(fit, file="fit.Rdata")
 
@@ -243,7 +291,6 @@ bothcm<-makeContrasts(
   levels=design
 )
 
-bothcm
 
 #fit the contrasts  
 fit2<-contrasts.fit(bothcm, fit=fit)
@@ -255,12 +302,14 @@ fit2 <-eBayes(fit2)
 save(fit2, file= "fit2eBayes.Rdata")
 ```
 
-How many probes are up and down regulated for each contrast?
+After fitting the contrasts to the model using our design matrix, we can see how many probes are up and down-regulated for each contras, based on a p-value cut-off of 0.05 and a log-fold-change cut-off of 0.5.
+
 
 ```{r,echo=FALSE,message=FALSE, warning=FALSE}
 
 #method=separate is same as doing topTable for all coefs separately
-results<-decideTests(fit2,method="separate", adjust.method="BH",
+
+results <- decideTests(fit2,method="separate", adjust.method="BH",
                       p.value=0.05, lfc=0.5)
 
 save(results, file= "decideTestsResults.Rdata")
@@ -278,25 +327,32 @@ library(reshape2)
 resultsDFmelt<-melt(resultsDF, id.vars="ProbeID")
 save(resultsDFmelt,file = "resultsDFmelt.Rdata")
 #number of up and down regulated probes based on 
-#p.val at least 0.05 and lfc at least 0.5
+#p.val at most 0.05 and lfc at least 0.5
 
 summary<-resultsDFmelt %>%
   group_by(variable)%>%
  summarize(down=sum(value=="-1"),up=sum(value=="1"))
-summary
+
+library(pander)
+pander(summary)
+
 save(summary, file = "summary.Rdata")
 
 
 
-##### CHECKING SYMBOLS AND PROBE IDS #############
+##### MERGE RESULTS WITH ENTREZ's FROM F DATA 
 
-#add entrez ids to the melted p val and lfc filtered df
+#add entrez ids to the melted p val and lfc filtered results df
+
 ProbeIDandSymbol<-fData(RAW.lumi)[,c(1,4,7)]
+
 save(ProbeIDandSymbol,file="ProbeIDandSymbol.Rdata")
 
 #merge the melted results matrix with the entrez ids
 interestingProbes<-merge(resultsDFmelt,ProbeIDandSymbol,
                          by="ProbeID")
+
+#####  MAKE VECTOR OF DE PROBES WITH ENTREZ's ONLY
 
 #remove the unchanged probes
 interestingProbes<-filter(interestingProbes, value!="0")
@@ -321,8 +377,10 @@ interestingProbes$ENTREZ_GENE_ID <- ifelse (interestingProbes$SYMBOL=="UBC","731
 #vector of interesting probes that HAVE entrez ids
 interestingProbes<-interestingProbes [! (is.na(interestingProbes$ENTREZ_GENE_ID)), ]
   
+####### EXTRACTING INTERESTING PROBES FOR ANALYSIS
 
 #function to extract the up and down regulated probes for each contrast with the entrez IDs
+
 getProbes<-function(contrast,direction){
   interestingProbes[ interestingProbes$variable == contrast & interestingProbes$value ==  direction,
                      "ENTREZ_GENE_ID"]
@@ -414,6 +472,10 @@ colnames(exprs(esetSel))<-pData(expressedProbes.lumi)[colnames(esetSel),"Treatme
 
 heatmap(exprs(esetSel))
 #NOPE
+```
+
+```{r,echo=FALSE,message=FALSE, warning=FALSE, results='hide'}
+
 ################# PREPARING DATA FOR INNATE DB ##############
 
 #innate db pathway analysis requires probes ids, log fold changes and expression pvalues. 
@@ -447,7 +509,7 @@ V186.24ForIDBDOWN<-V186.24ForIDB%>%
 
 write.table(V186.24ForIDBDOWN, file="V186.24ForIDBDOWN.txt",
             sep="\t", row.names = FALSE)
-##############################################################
+#############################################################
 
 #looking and # of sig probes with different p val limits
 
@@ -461,9 +523,6 @@ sigcolors <- c("red", "blue", "green", "yellow","pink","purple")
 sapply(1:length(sigline), function(x){abline(h=sigline[x], col=sigcolors[x])})
 
 ```
-Looks like there would still be a lot (hundreds)of DE probes for the v186 24hr comparison if reduced the adj p val cutoff to 0.01, but that would reduce the # of DE probes in the v186.3 to ~2 and v186.8 to ~3. The SD90.3 would be 2 and SD90.8 and .24 were already zero with p<=0.05
-
-
 
 SessionInfo()
 
