--- a/markdown_vaginal_cell_microarray.Rmd
+++ b/markdown_vaginal_cell_microarray.Rmd
@@ -276,5 +276,117 @@ ggplot(meltSummary,aes(x=Time, y = Probes))+
   geom_line(aes(group=Virus, color=Virus))+
   theme(aspect.ratio = 1)+
   ggtitle("Number of DE probes (sample 3E excluded)")
+```
+
+
+V186 vs mock at 3hr
+
+```{r,echo=FALSE,message=FALSE, warning=FALSE}
+
+#adj p values <0.05 and lfc >=0.5
+
+CELLStt1<-topTable(fit2,coef="V186.3vsMock.3", adjust.method = "BH", number=Inf, p.value=0.05, lfc=0.5)
+
+CELLSselected1<-rownames(CELLStt1) #selecting the probes of interest
+
+#from the expressedProbes.lumi batch, select just the samples #corresponding to the corresponding coefs (time=24, treatment not SD90)
+
+CELLSesetSel1<-expressedProbes.lumi[CELLSselected1,targets$Time=="3"& targets$Treatment !="SD90" ]
+
+#To have informative names along the bottom of the heatmap,replace #the true Sample Names(numbers)with their corresponding treatment.
+#i.e. look at the rows in expressedProbes.lumi that match the colnames in exprs and provide the value for Treatment in those rows. Set that as the new colnames.
+
+colnames(exprs(CELLSesetSel1))<-pData(expressedProbes.lumi)[colnames(CELLSesetSel1),"Treatment"]
+
+heatmap(exprs(CELLSesetSel1))
+```
+
+V186 vs mock at 8hr
+
+```{r,echo=FALSE,message=FALSE, warning=FALSE}
+#repeat for coefs 2
+CELLStt2<-topTable(fit2,coef="V186.8vsMock.8", adjust.method = "BH", number=Inf, p.value=0.05, lfc=0.5)
+
+CELLSselected2<-rownames(CELLStt2) #selecting the probes of interest
+
+CELLSesetSel2<-expressedProbes.lumi[CELLSselected2,targets$Time=="8"& targets$Treatment !="SD90" ]
+
+colnames(exprs(CELLSesetSel2))<-pData(expressedProbes.lumi)[colnames(CELLSesetSel2),"Treatment"]
+
+
+heatmap(exprs(CELLSesetSel2))
+```
+
+V186 vs mock at 24hr
+
+```{r,echo=FALSE,message=FALSE, warning=FALSE}
+
+#and coef3
+CELLStt3<-topTable(fit2,coef="V186.24vsMock.24", adjust.method = "BH", number=Inf, p.value=0.05, lfc=0.5)
+
+CELLSselected3<-rownames(CELLStt3) #selecting the probes of interest
+
+CELLSesetSel3<-expressedProbes.lumi[CELLSselected3,targets$Time=="24"& targets$Treatment !="SD90" ]
+
+colnames(exprs(CELLSesetSel3))<-pData(expressedProbes.lumi)[colnames(CELLSesetSel3),"Treatment"]
+
+heatmap(exprs(CELLSesetSel3))
+```
+
+```{r,echo=FALSE,message=FALSE, warning=FALSE}
+CELLSttList<-list(CELLStt1, CELLStt2,CELLStt3)
+ProbeIDandSymbol<-fData(RAW.lumi)[,c(1,4,7)]
+save(ProbeIDandSymbol, file="CELLSProbeIDandSymbol.Rda")
+
+#function to get short versions of the tt's and include
+#probeID, entrez and symbols
+
+getInteresting <- function(df){
+short<-df[,c("logFC","adj.P.Val")]
+  short$ProbeID<-rownames(short)
+  rownames(short)<- NULL
+  
+  merge(ProbeIDandSymbol,short, by = "ProbeID")
+ 
+}
+
+
+CELLSshortTTlist<-lapply(CELLSttList,FUN=getInteresting)
+
+names(CELLSshortTTlist) <-c("CELLS_V186.3","CELLS_V186.8","CELLS_V186.24")
+
+#functions to get the up and down regulated probes
+
+getUP<-function(df){
+  df%>%
+    filter(logFC>0)%>%
+    select(ENTREZ_GENE_ID, logFC, adj.P.Val)
+}
+ df["logFC">0, c("ENTREZ_GENE_ID", "logFC", "adj.P.Val")]
+}
+
+getDOWN<-function(df){
+  df%>%
+    filter(logFC<0)%>%
+    select(ENTREZ_GENE_ID, logFC, adj.P.Val)
+}
+
+
+#get upreg
+CELLSV186UP<-lapply(CELLSshortTTlist,FUN=getUP)
+#get downreg      
+CELLSV186DOWN<-lapply(CELLSshortTTlist,FUN=getDOWN)
+
+
+
+
+
+
+
+#mapply looping over both list itself and the list names to name the txt files
+
+mapply(write.table,CELLSV186UP,file=paste(names(CELLSV186UP),"UP",".txt", sep=""))
+
+mapply(write.table,CELLSV186DOWN,file=paste(names(CELLSV186DOWN),"DOWN",".txt",sep=""))
 
 
